# Matrix

./: .clang-tidy  CMakeLists.txt  checksums  init.sh  matrix.h  readme.md  test.cpp  test.sh  tiny_test.hpp
data/: matr.txt
